# backtest-portfolio-br

./: .gitignore  README.md  pyproject.toml
notebooks/: backtesting-fiis.ipynb  tearsheet-fiis.html
