[tool.poetry]
name = "fiis"
version = "0.1.0"
description = ""
authors = ["Gabriel Fior <fior.gbm@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.5.1"
notebook = "^6.5.2"
yfinance = "^0.1.87"
loguru = "^0.6.0"
bt = "^0.2.9"
QuantStats = "^0.0.59"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
my_package_cli = 'main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
